Add support for creating and listing subscriptions via admin api.
