# src/api/admin/v1/openapi/definitions.yaml
@@ -192,6 +192,38 @@ AuthTokenList:
       required:
         - items
 
+Subscription:
+  allOf:
+    - $ref: '#/definitions/BaseEntity'
+    - properties:
+        channelId:
+          type: string
+          readOnly: true
+        userId:
+          type: string
+          readOnly: true
+        allowRead:
+          type: boolean
+        allowWrite:
+          type: boolean
+      required:
+        - channelId
+        - userId
+        - allowRead
+        - allowWrite
+    - $ref: '#/definitions/TimestampsTrait'
+
+SubscriptionList:
+  allOf:
+    - $ref: '#/definitions/BaseList'
+    - properties:
+        items:
+          type: array
+          items:
+            $ref: '#/definitions/Subscription'
+      required:
+        - items
+
 # user entity
 User:
   allOf:
